<resources>
    <string name="app_name">ITE Online Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_title">screen title</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email:</string>
    <string name="todo">TODO</string>
    <string name="gmail">abcefgh1@gmail.com</string>
    <string name="gender">Gender:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="price">$$$$</string>
    <string name="rating">Rating: </string>
    <string name="description">Description</string>
    <string name="add_to_card">Add to card</string>
    <string name="price_title">Price: </string>
    <string name="search">Search......</string>
</resources>