<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".Ui.Activity.ProductDetailActivity">
    <RelativeLayout
        android:background="@color/primary"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="240dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/back_btn"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:cardCornerRadius="8dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/bg_img_button"
                android:elevation="10dp">
                <RelativeLayout
                    android:background="@color/bg_img_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_arrow_back"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/img_product_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:fontFamily="@font/play_bold"
                android:text="@string/price"/>
        </LinearLayout>
       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_marginTop="5dp"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:textStyle="bold"
               android:text="@string/rating"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="16sp"
               android:fontFamily="@font/play_regular"
               android:textColor="@color/secondary"/>
           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/ratingRecycler"
              android:layout_marginHorizontal="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:fontFamily="@font/play_bold"
            android:textSize="18sp"
            android:textColor="@color/secondary"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/description"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@color/gray_text"
            android:layout_width="wrap_content"
            android:layout_height="90dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/secondary"
            android:text="@string/price_title"
            android:fontFamily="@font/play_bold"/>
        <TextView
            android:id="@+id/price_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/secondary"
            android:text="@string/price"
            android:fontFamily="@font/play_bold"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_card_btn"
            android:text="@string/add_to_card"
            android:textColor="@color/primary"
            android:background="@drawable/button_bg"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="160dp"
            android:layout_height="50dp"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>