<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".Ui.Fragment.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/images"
            app:civ_border_width="4dp"
            app:civ_border_color="@color/white"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginHorizontal="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/full_name"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textColor="@color/secondary"
                android:fontFamily="@font/play_bold"
                android:text="@string/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/email"
                android:layout_marginBottom="20dp"
                android:text="@string/email"
                android:fontFamily="@font/play_regular"
                android:textColor="@color/gray_text"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/edit_profile"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="10dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/todo" />
    </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--item-->
                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginVertical="4dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:textColor="@color/secondary"
                        android:fontFamily="@font/play_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"/>

                    <TextView
                        android:id="@+id/child_email"
                        android:layout_marginStart="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/gray_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_arrow_go"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/todo" />
                </LinearLayout>
                <View
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/line_gray"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"/>
                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginVertical="4dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/date_of_birth"
                        android:textSize="16sp"
                        android:textColor="@color/secondary"
                        android:fontFamily="@font/play_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"/>

                    <TextView
                        android:id="@+id/date_of_birth"
                        android:layout_marginStart="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/gray_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_arrow_go"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/todo" />
                </LinearLayout>
                <View
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/line_gray"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"/>
                <LinearLayout
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginVertical="4dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/gender"
                        android:textSize="16sp"
                        android:textColor="@color/secondary"
                        android:fontFamily="@font/play_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"/>

                    <TextView
                        android:id="@+id/gender"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_arrow_go"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/todo" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_phone"
                android:layout_width="25dp"
                android:layout_height="25dp"

                android:contentDescription="@string/todo" />
            <TextView
                android:layout_marginVertical="4dp"
                android:layout_marginStart="10dp"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textColor="@color/secondary"
                android:fontFamily="@font/play_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/phone_number"
                android:layout_marginStart="10dp"
                android:textColor="@color/gray_text"
                android:textSize="14sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_arrow_go"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_address"
                android:layout_width="25dp"
                android:layout_height="25dp"

                android:contentDescription="@string/todo" />
            <TextView
                android:layout_marginVertical="4dp"
                android:layout_marginStart="10dp"
                android:text="@string/address"
                android:textSize="16sp"
                android:textColor="@color/secondary"
                android:fontFamily="@font/play_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/address"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:textColor="@color/gray_text"
                android:textSize="11sp" />

            <ImageView
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_arrow_go"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>